--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -1,19 +1,11 @@
 <nav>
-  <div class="breadcrumb print--hide">
+  <div class="breadcrumb">
     <ol class="breadcrumb__list">
-      {% if page.breadcrumbs %}
-        {% for breadcrumb in page.breadcrumbs %}
-        <li class="breadcrumb__item">
-          <a class="breadcrumb__link" href="{{ breadcrumb.link }}">{{ breadcrumb.label }}</a>
-        </li>
-        {% endfor %}
-      {% else %}
       <li class="breadcrumb__item">
         <a class="breadcrumb__link" href="#">Home</a>
       </li>
-      {% endif %}
       <li class="breadcrumb__item">
-        {{ page.title }}
+        <a class="breadcrumb__link" href="#">Parent page</a>
       </li>
     </ol>
   </div>
