--- a/_layouts/basic.html
+++ b/_layouts/basic.html
@@ -1,5 +1,5 @@
 <!-- A basic layout with minimal header -->
-<!-- Use this template for pages about the prototypes, not the prototypes themselves -->
+<!-- Use this template for markdown pages about the prototypes, not the prototypes themselves -->
 
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
