--- a/_sass/_borders.scss
+++ b/_sass/_borders.scss
@@ -2,6 +2,10 @@
   border: 1px solid $iron;
 }
 
+.border-left--matisse {
+  border-left: 7px solid $matisse;
+}
+
 .border-bottom--iron {
   border-bottom: 1px solid $iron;
 }
