--- a/_includes/banners/warning.html
+++ b/_includes/banners/warning.html
@@ -1,6 +1,7 @@
-<div class="banner background--carrot">
-	<div class="wrapper">
-		<p class="banner__content font-size--16">
-			<strong class="banner__tag">Warning</strong> this is a prototype. The content may not be complete or accurate.</p>
-	</div>
+<div class="background--matisse">
+<div class="wrapper">
+<div class="prototype padding-top--1 padding-bottom--1">
+	<p class="margin-bottom--0"><strong class="banner__tag">Warning</strong> this is a prototype. The content may not be complete or accurate.</p>
+</div>
+</div>
 </div>
