--- a/_layouts/prototype.html
+++ b/_layouts/prototype.html
@@ -15,7 +15,9 @@
 
     {{ content }}
 
-    {% include footer.html %}
+    {% if page.footer != false %}
+      {% include footer.html %}
+    {% endif %}
 
   </body>
 
