--- a/_sass/_tables.scss
+++ b/_sass/_tables.scss
@@ -1,34 +1,41 @@
-.table-v2 {
-  caption {
-    padding-bottom: 16px;
-    margin-bottom: 0px;
-    border-bottom: 1px solid $iron;
-  }
-  th,td {
-    border-bottom: 1px solid $iron;
-    text-align: left;
-    line-height: 1.3;
-    padding: .8em 1em .8em 0;
-  }
-  th {
-    border-top: 3px solid $iron;
-    border-bottom: 3px solid $iron;
-  }
-  td:last-child, th:last-child {
-    padding-right: 0;
-  }
-  .cell--align-right {
-    text-align: right;
-  }
-  .row--group-start {
-    border-top: 3px solid $iron;
-    border-bottom: 3px solid $iron;
-  }
-  .row--group-end {
-    border-top: 3px solid $iron;
-    border-bottom: 3px solid $iron;
-  }
-  sup {
-    vertical-align: baseline;
-  }
+caption {
+  padding-bottom: 16px;
+  margin-bottom: 0;
+  border-bottom: 1px solid $iron;
+}
+
+td,
+th {
+  border-bottom: 1px solid $iron;
+  text-align: left;
+  line-height: 1.3;
+  padding: 0.8em 1em 0.8em 0;
+}
+
+th {
+  border-top: 3px solid $iron;
+  border-bottom: 3px solid $iron;
+}
+
+td:last-child,
+th:last-child {
+  padding-right: 0;
+}
+
+.cell--align-right {
+  text-align: right;
+}
+
+.row--group-start {
+  border-top: 3px solid $iron;
+  border-bottom: 3px solid $iron;
+}
+
+.row--group-end {
+  border-top: 3px solid $iron;
+  border-bottom: 3px solid $iron;
+}
+
+sup {
+  vertical-align: baseline;
 }
