--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,39 +3,25 @@
 ---
 
 .prototype {
-
+// Elements
 @import "colours";
 @import "typography";
 @import "tables";
-@import "tables-cmd";
 @import "links";
 @import "visually-hidden";
 @import "borders";
 @import "forms";
+@import "flex-grid";
 
-@import "footer";
-
-@import "alerts";
+// Patterns
 @import "banners";
 @import "breadcrumbs";
-@import "download-options";
-@import "embed";
 @import "meta";
-@import "page-intro";
 @import "pullout-box";
 @import "show-hide";
 @import "details";
-@import "nav-secondary";
 @import "footnotes";
 
-
+// Utilities
 @import "pattern-library";
-@import "typography-families";
-@import "geography";
-
-@import "interactive-buttons";
-@import "button-groups";
-@import "dropdown";
-@import "interactive-typography";
-@import "search";
 }
