--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -35,7 +35,7 @@ h6 {
 }
 
 // Base font size
-address,li,p {
+address,li,p,.btn {
   font-size: 16px;
   margin-bottom: $spacing-unit*4;
   @media (min-width: 768px) {
@@ -51,6 +51,7 @@ ul,ol {
 li {
   margin: 0;
   padding: 0;
+  padding-bottom: $spacing-unit;
 }
 
 // Font weights
@@ -119,6 +120,13 @@ h6 {
   @media (min-width: 768px) {
     font-size: 14px;
   }
+}
+
+// hr
+
+hr {
+  border: 0;
+  border-bottom: 1px solid $iron;
 }
 
 // Section contents for the bulletin design sprint
