--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -64,5 +64,7 @@
 
 		</div>
 	</div>
-	<div id="viewport-sm" class="js-viewport-size"></div><div id="viewport-md" class="js-viewport-size"></div><div id="viewport-lg" class="js-viewport-size"></div>
+	<div id="viewport-sm" class="js-viewport-size"></div>
+	<div id="viewport-md" class="js-viewport-size"></div>
+	<div id="viewport-lg" class="js-viewport-size"></div>
 </footer>
