--- a/_includes/banners/warning.html
+++ b/_includes/banners/warning.html
@@ -1,7 +1,7 @@
-<div class="background--matisse">
-<div class="wrapper">
-<div class="prototype padding-top--1 padding-bottom--1">
-	<p class="margin-bottom--0"><strong class="banner__tag">Warning</strong> this is a prototype. The content may not be complete or accurate.</p>
-</div>
-</div>
+<div class="background--astral">
+	<div class="wrapper">
+		<div class="prototype padding-top--1 padding-bottom--1">
+			<p class="margin-bottom--0"><strong class="banner__tag">Warning</strong> this is a prototype. The content may not be complete or accurate.</p>
+		</div>
+	</div>
 </div>
