--- a/_sass/_breadcrumbs.scss
+++ b/_sass/_breadcrumbs.scss
@@ -5,6 +5,8 @@
 
 .breadcrumb__list {
   padding-left: 0;
+  margin-top: $spacing-unit*2;
+  margin-bottom: $spacing-unit*2;
 }
 
 .breadcrumb__item {
@@ -12,7 +14,8 @@
   background-size: 12px 14px;
   background-repeat: no-repeat;
   background-position: right center;
-    padding-right: 22px;
+  padding-right: 22px;
+  padding-bottom: 4px;
 }
 
 .breadcrumb__item::after {
