--- a/_sass/_breadcrumbs.scss
+++ b/_sass/_breadcrumbs.scss
@@ -16,6 +16,8 @@
   background-position: right center;
   padding-right: 22px;
   padding-bottom: 4px;
+  line-height: 1.2;
+  display: inline;
 }
 
 .breadcrumb__item::after {
