--- a/_sass/_colours.scss
+++ b/_sass/_colours.scss
@@ -23,6 +23,7 @@ $haze:			  #F0F1F1;
 $white:			  #FFFFFF;
 $mine-shaft:	#222222;
 $cod-gray:	  #111111;
+$link-hover-colour: #2B8CC4;
 
 
 // Font colours
