--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -30,7 +30,6 @@ h3,
 h4,
 h5,
 h6 {
-  padding-top: $spacing-unit*2;
   font-weight: bold;
 }
 
@@ -39,20 +38,25 @@ address,li,p,.btn, summary {
   font-size: 16px;
   margin-bottom: $spacing-unit*4;
   @media (min-width: 768px) {
-    font-size: 18px;
+    font-size: 19px;
   }
 }
 
 // Lists
 ul,ol {
   margin-bottom: $spacing-unit*4;
-  padding-left: $spacing-unit*2;
+  //padding-left: $spacing-unit*2;
 }
 li {
-  margin: 0;
-  padding: 0;
-  padding-bottom: $spacing-unit;
+  //margin: 0;
+  margin-bottom: $spacing-unit*3;
+  //padding: 0;
+  //padding-bottom: $spacing-unit;
 }
+
+
+
+
 
 // Font weights
 .font-weight--bold {
@@ -66,6 +70,10 @@ li {
 // Links
 a {
   text-decoration: underline;
+  font-size: 16px;
+  @media (min-width: 768px) {
+    font-size: 19px;
+  }
 }
 
 .font-xlarge,
@@ -73,8 +81,10 @@ a {
 h1 {
   font-size: 32px;
   line-height: 1.3;
+  margin: 15px 0 30px 0;
   @media (min-width: 768px) {
-    font-size: 38px;
+    font-size: 48px;
+    margin: 30px 0 60px 0;
   }
 }
 
@@ -82,17 +92,21 @@ h1 {
 .heading-large,
 h2 {
   font-size: 24px;
+  margin: 24px 0 10px 0;
   @media (min-width: 768px) {
-    font-size: 30px;
+    font-size: 36px;
+    margin: 48px 0 20px 0;
   }
 }
 
 .font-medium,
 .heading-medium,
 h3 {
-  font-size: 18px;
+  font-size: 19px;
+  margin: 24px 0 10px 0;
   @media (min-width: 768px) {
     font-size: 24px;
+    margin: 32px 0 20px 0;
   }
 }
 
@@ -100,8 +114,10 @@ h3 {
 .heading-small,
 h4 {
   font-size: 16px;
+  margin: 12px 0 8px 0;
   @media (min-width: 768px) {
-    font-size: 20px;
+    font-size: 19px;
+    margin: 24px 0 8px 0;
   }
 }
 
@@ -110,7 +126,7 @@ h4 {
 h5 {
   font-size: 16px;
   @media (min-width: 768px) {
-    font-size: 18px;
+    font-size: 19px;
   }
 }
 
@@ -134,6 +150,11 @@ hr {
 ul.section-contents {
   list-style: none;
   margin: 0;
+  padding: 0;
+}
+
+.section-contents li {
+  margin: 0 0 $spacing-unit*1 0;
   padding: 0;
 }
 
