--- a/_includes/sticky-nav.html
+++ b/_includes/sticky-nav.html
@@ -31,5 +31,14 @@
     <li>
       <a href="#section-10">Get all data</a>
     </li>
+    <li>
+      <a href="#section-11">Quote</a>
+    </li>
+    <li>
+      <a href="#section-12">Info alert</a>
+    </li>
+    <li>
+      <a href="#section-13">Charts</a>
+    </li>
   </ul>
 </div>
