--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -7,6 +7,9 @@
       <li class="breadcrumb__item">
         <a class="breadcrumb__link" href="#">Parent page</a>
       </li>
+      <li class="breadcrumb__item">
+        This is the current page
+      </li>
     </ol>
   </div>
 </nav>
