--- a/_includes/toggle-content.html
+++ b/_includes/toggle-content.html
@@ -1,8 +1,8 @@
-<details role="group" class="margin-bottom--4">
+<details role="group" class="margin-bottom--4 margin-top--1">
   <summary role="button" aria-controls="details-content-1" aria-expanded="true">
-    <span class="summary">Read more...
+    <span class="summary" style="font-size:18px;">Knife crime reaches a seven-year-high
   </summary>
-  <div class="" id="details-content-1" aria-hidden="false">
+  <div class="panel" id="details-content-1" aria-hidden="false">
     <p>The police recorded 39,598 offences involving a knife or sharp instrument in the year ending December 2017. This is a 22% increase compared with the previous year (32,468), and the highest number in the seven-years' of available data.</p>
     <p>The past three years have seen a rise in the number of recorded crimes involving a knife or sharp instrument. Before this, we saw a general downward trend since the year ending March 2011.</p>
     <p>"Assault with injury" and "assault with intent to cause serious harm" made up around half (49%) of all crimes involving a knife or sharp instrument. All categories of weapons crime for which we collect data showed increases.</p>
