--- a/_sass/_links.scss
+++ b/_sass/_links.scss
@@ -19,6 +19,11 @@ a:hover {
   color: $link-hover-colour;
 }
 
+a.white-link:hover {
+  color: $white;
+  opacity: 0.7;
+}
+
 .js-hover-click .background--gallery a:visited,
 .background--mercury.js-hover-click a:visited,
 .page-content a:visited {
@@ -54,8 +59,8 @@ summary:focus {
 // Buttons
 
 .btn {
-  margin-right: 0.5em;
-
+  margin-bottom: 0;
+  //margin-right: 0.5em;
 }
 
  .basic a.btn  {
@@ -63,18 +68,17 @@ summary:focus {
  }
 
  .basic a.btn:visited  {
-   color: white;
+   color: $white;
  }
-
 
  a.btn:hover {
    text-decoration: none;
+   color: $white;
  }
 
  .section__content--markdown a.btn {
    text-decoration: none;
  }
-
 
 .btn:focus {
   outline: 3px solid $carrot;
