--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -45,13 +45,11 @@ address,li,p,.btn, summary {
 // Lists
 ul,ol {
   margin-bottom: $spacing-unit*4;
-  //padding-left: $spacing-unit*2;
+  padding-left: $spacing-unit*2;
 }
 li {
-  //margin: 0;
-  margin-bottom: $spacing-unit*3;
-  //padding: 0;
-  //padding-bottom: $spacing-unit;
+  padding: 0;
+  margin-bottom: $spacing-unit*2;
 }
 
 
@@ -81,10 +79,10 @@ a {
 h1 {
   font-size: 32px;
   line-height: 1.3;
-  margin: 15px 0 30px 0;
+  margin: 16px 0 24px 0;
   @media (min-width: 768px) {
-    font-size: 48px;
-    margin: 30px 0 60px 0;
+    font-size: 40px;
+    margin: 32px 0 32px 0;
   }
 }
 
@@ -92,10 +90,10 @@ h1 {
 .heading-large,
 h2 {
   font-size: 24px;
-  margin: 24px 0 10px 0;
+  margin: 24px 0 16px 0;
   @media (min-width: 768px) {
-    font-size: 36px;
-    margin: 48px 0 20px 0;
+    font-size: 32px;
+    margin: 32px 0 32px 0;
   }
 }
 
@@ -103,10 +101,10 @@ h2 {
 .heading-medium,
 h3 {
   font-size: 19px;
-  margin: 24px 0 10px 0;
+  margin: 24px 0 16px 0;
   @media (min-width: 768px) {
     font-size: 24px;
-    margin: 32px 0 20px 0;
+    margin: 32px 0 32px 0;
   }
 }
 
@@ -114,7 +112,7 @@ h3 {
 .heading-small,
 h4 {
   font-size: 16px;
-  margin: 12px 0 8px 0;
+  margin: 16px 0 8px 0;
   @media (min-width: 768px) {
     font-size: 19px;
     margin: 24px 0 8px 0;
@@ -124,9 +122,10 @@ h4 {
 .font-xsmall,
 .heading-xsmall,
 h5 {
-  font-size: 16px;
+  font-size: 14px;
+  margin-bottom: $spacing-unit;
   @media (min-width: 768px) {
-    font-size: 19px;
+    font-size: 16px;
   }
 }
 
@@ -167,4 +166,14 @@ summary {
 .panel {
   padding-top: $spacing-unit;
   padding-bottom: $spacing-unit;
+}
+
+blockquote {
+  text-align: center;
+  padding-left: $spacing-unit*4;
+  padding-right: $spacing-unit*4;
+  @media (min-width: 768px) {
+    padding-left: $spacing-unit*8;
+    padding-right: $spacing-unit*8;
+  }
 }
