All the changes

--- a/_includes/chart.html
+++ b/_includes/chart.html
@@ -1,5 +1,18 @@
+<h4>Increases evident in police recorded offences involving a knife or sharp instrument for the third year</h4>
+<p class="font-xsmall">England and Wales, year ending March 2011 to year ending December 2017</p>
 
-<h5>Download this chart</h5>
+
+<iframe id="datawrapper-chart-cXkyA" src="//datawrapper.dwcdn.net/cXkyA/3/" scrolling="no" frameborder="0" allowtransparency="true" style="width: 100% !important;" height="400"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["cXkyA"]={},window.datawrapper["cXkyA"].embedDeltas={"100":400,"200":400,"300":400,"400":400,"500":400,"700":400,"800":400,"900":400,"1000":400},window.datawrapper["cXkyA"].iframe=document.getElementById("datawrapper-chart-cXkyA"),window.datawrapper["cXkyA"].iframe.style.height=window.datawrapper["cXkyA"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["cXkyA"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("cXkyA"==b)window.datawrapper["cXkyA"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
+
+<p class="heading-xsmall">Source: Police recorded crime, Home Office</p>
+
+<p class="heading-xsmall">Notes:</p>
+<ol>
+<li class="font-xsmall">Police recorded crime data are not designated as National Statistics.</li>
+</ol>
+
+
+<h5 class="margin-bottom--1">Download this chart</h5>
 <div class="btn-group margin-bottom--4">
     <button class="btn btn--primary font-xsmall">
         Image
