--- a/_includes/snapshot.html
+++ b/_includes/snapshot.html
@@ -1,11 +1,11 @@
 <div class="flex-grid">
   <div class="flex-col background--gallery padding-left--2 padding-right--2">
-    <h3><a class="heading-medium" href="../crime-overview">Crime in England and Wales</a></h3>
-    <p class="font-weight--bold">While crime has fallen over the long-term, the short-term picture is more stable</p>
-    <div class="margin-bottom--2" style="padding:8px 8px 8px 8px; background-color:white;">
-      <img style="width:100%" src="{{ "/assets/img/crime_survey_chart_2.png" | relative_url }}" class="" alt="">
+    <h4><a class="heading-medium" href="../crime-overview">Crime in England and Wales</a></h4>
+    <p>While crime has fallen over the long-term, the short-term picture is more stable</p>
+    <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
+      <iframe id="datawrapper-chart-nNagi" src="//datawrapper.dwcdn.net/nNagi/1/" scrolling="no" frameborder="0" allowtransparency="true" style="width: 100%; min-width: 100% !important;" height="100%"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["nNagi"]={},window.datawrapper["nNagi"].embedDeltas={"100":440,"200":440,"300":440,"400":440,"500":440,"700":440,"800":440,"900":440,"1000":440},window.datawrapper["nNagi"].iframe=document.getElementById("datawrapper-chart-nNagi"),window.datawrapper["nNagi"].iframe.style.height=window.datawrapper["nNagi"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["nNagi"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("nNagi"==b)window.datawrapper["nNagi"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
     </div>
-    <details role="group" class="margin-bottom--2">
+    <details role="group" class="margin-bottom--4 details-small">
       <summary role="button" aria-controls="details-content-1" aria-expanded="true">
         <span class="summary">What you need to know<span class="visuallyhidden"></span></summary>
         <div class="panel" id="details-content-1" aria-hidden="false">
@@ -15,12 +15,12 @@
   </div>
 
   <div class="flex-col background--gallery padding-left--2 padding-right--2">
-    <h3><a class="heading-medium" href="#">Homicide in England and Wales</a></h3>
-    <p class="font-weight--bold">The number of homicides has been impacted by recent terrorist attacks</p>
+    <h4><a class="heading-medium" href="#">Homicide in England and Wales</a></h4>
+    <p>The number of homicides has been impacted by recent terrorist attacks</p>
     <div class="margin-bottom--2" style="background-color:white;">
       <p class="font-medium margin-bottom--0" style="padding:16px;">Homicides recorded by the police fall 1% to 688</p>
     </div>
-    <details role="group" class="margin-bottom--2">
+    <details role="group" class="margin-bottom--4 details-small">
       <summary role="button" aria-controls="details-content-1" aria-expanded="true">
         <span class="summary">What you need to know<span class="visuallyhidden"></span></summary>
         <div class="panel" id="details-content-1" aria-hidden="false">
