--- a/_sass/_breadcrumbs.scss
+++ b/_sass/_breadcrumbs.scss
@@ -1,4 +1,11 @@
 .breadcrumb {
+  li {
+      font-size: 16px;
+  }
+  a {
+      font-size: 16px;
+  }
+
   border-bottom:none;
   padding: 0;
 }
@@ -14,10 +21,12 @@
   background-size: 12px 14px;
   background-repeat: no-repeat;
   background-position: right center;
-  padding-right: 22px;
+  //padding-right: 22px;
+  padding-right: 16px;
   padding-bottom: 4px;
   line-height: 1.2;
   display: inline;
+  margin-right: 2px;
 }
 
 .breadcrumb__item::after {
