Building out weapons page

--- a/_includes/chart.html
+++ b/_includes/chart.html
@@ -1,4 +1,4 @@
-<h4>Increases evident in police recorded offences involving a knife or sharp instrument for the third year</h4>
+<p class="heading-small">Increases evident in police recorded offences involving a knife or sharp instrument for the third year</p>
 <p class="font-xsmall">England and Wales, year ending March 2011 to year ending December 2017</p>
 
 
