--- a/_includes/snapshot.html
+++ b/_includes/snapshot.html
@@ -1,21 +1,57 @@
 <div class="flex-grid">
   <div class="flex-col background--gallery padding-left--2 padding-right--2">
     <h4><a class="heading-medium" href="../crime-overview">Crime in England and Wales</a></h4>
-    <p>While crime has fallen over the long-term, the short-term picture is more stable</p>
+    <p>Over the long-term, crime has fallen, but some crimes have risen slightly in the previous 12 months</p>
     <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
-      <iframe id="datawrapper-chart-q4CQl" src="//datawrapper.dwcdn.net/q4CQl/1/" scrolling="no" frameborder="0" allowtransparency="true" style="width: 0; min-width: 100% !important;" height="392"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["q4CQl"]={},window.datawrapper["q4CQl"].embedDeltas={"100":392,"200":392,"300":392,"400":392,"500":392,"700":392,"800":392,"900":392,"1000":392},window.datawrapper["q4CQl"].iframe=document.getElementById("datawrapper-chart-q4CQl"),window.datawrapper["q4CQl"].iframe.style.height=window.datawrapper["q4CQl"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["q4CQl"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("q4CQl"==b)window.datawrapper["q4CQl"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
+      <iframe id="datawrapper-chart-a5OSn" src="//datawrapper.dwcdn.net/a5OSn/1/" scrolling="no" frameborder="0" allowtransparency="true" style="width: 0; min-width: 100% !important;" height="465"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["a5OSn"]={},window.datawrapper["a5OSn"].embedDeltas={"100":465,"200":465,"300":465,"400":465,"500":465,"700":465,"800":465,"900":465,"1000":465},window.datawrapper["a5OSn"].iframe=document.getElementById("datawrapper-chart-a5OSn"),window.datawrapper["a5OSn"].iframe.style.height=window.datawrapper["a5OSn"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["a5OSn"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("a5OSn"==b)window.datawrapper["a5OSn"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
     </div>
     <details role="group" class="margin-bottom--4 details-small">
       <summary role="button" aria-controls="details-content-1" aria-expanded="true">
         <span class="summary">What you need to know<span class="visuallyhidden"></span></summary>
         <div class="panel" id="details-content-1" aria-hidden="false">
-          <p class="margin-top--0 margin-bottom--1">As measured by the Crime Survey of England and Wales</p>
+          <p class="margin-top--0 margin-bottom--1">Data on this chart refer to different time periods.</p>
+          <p class="margin-top--0 margin-bottom--1">1981 to 1999 refer to crimes experienced in the calendar year (January to December); and from year ending March 2002 onwards the estimates relate to crimes experienced in the 12 months before interview, based on interviews carried out in that financial year (April to March).</p>
         </div>
     </details>
   </div>
 
   <div class="flex-col background--gallery padding-left--2 padding-right--2">
-    <h4><a class="heading-medium" href="#">Homicide in England and Wales</a></h4>
+    <h4><a class="heading-medium" href="#">This is for violent crime</a></h4>
+    <p>The number of homicides has been impacted by recent terrorist attacks</p>
+    <div class="margin-bottom--2" style="background-color:white;">
+      <p class="font-medium margin-bottom--0" style="padding:16px;">Homicides recorded by the police fall 1% to 688</p>
+    </div>
+    <details role="group" class="margin-bottom--4 details-small">
+      <summary role="button" aria-controls="details-content-1" aria-expanded="true">
+        <span class="summary">What you need to know<span class="visuallyhidden"></span></summary>
+        <div class="panel" id="details-content-1" aria-hidden="false">
+          <p class="margin-top--0 margin-bottom--1">These numbers are also affected by the 2017 Hillsborough verdict.</p>
+        </div>
+    </details>
+  </div>
+</div>
+
+
+
+
+<div class="flex-grid margin-top--4">
+  <div class="flex-col background--gallery padding-left--2 padding-right--2">
+    <h4><a class="heading-medium" href="../crime-overview">Weapons crime in England and Wales</a></h4>
+    <p>Police recorded 7,130 (22%) more crimes involving weapons, with knife crime in cities rising most</p>
+    <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
+      <iframe id="datawrapper-chart-a5OSn" src="//datawrapper.dwcdn.net/a5OSn/1/" scrolling="no" frameborder="0" allowtransparency="true" style="width: 0; min-width: 100% !important;" height="465"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["a5OSn"]={},window.datawrapper["a5OSn"].embedDeltas={"100":465,"200":465,"300":465,"400":465,"500":465,"700":465,"800":465,"900":465,"1000":465},window.datawrapper["a5OSn"].iframe=document.getElementById("datawrapper-chart-a5OSn"),window.datawrapper["a5OSn"].iframe.style.height=window.datawrapper["a5OSn"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["a5OSn"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("a5OSn"==b)window.datawrapper["a5OSn"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
+    </div>
+    <details role="group" class="margin-bottom--4 details-small">
+      <summary role="button" aria-controls="details-content-1" aria-expanded="true">
+        <span class="summary">What you need to know<span class="visuallyhidden"></span></summary>
+        <div class="panel" id="details-content-1" aria-hidden="false">
+          <p class="margin-top--0 margin-bottom--1">Police recorded crime data are not designated as National Statistics.</p>
+        </div>
+    </details>
+  </div>
+
+  <div class="flex-col background--gallery padding-left--2 padding-right--2">
+    <h4><a class="heading-medium" href="#">This is for fraud</a></h4>
     <p>The number of homicides has been impacted by recent terrorist attacks</p>
     <div class="margin-bottom--2" style="background-color:white;">
       <p class="font-medium margin-bottom--0" style="padding:16px;">Homicides recorded by the police fall 1% to 688</p>
