Added in charts to test

--- a/_includes/snapshot.html
+++ b/_includes/snapshot.html
@@ -3,7 +3,7 @@
     <h4><a class="heading-medium" href="../crime-overview">Crime in England and Wales</a></h4>
     <p>Over the long-term, crime has fallen, but some crimes have risen slightly in the previous 12 months</p>
     <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
-      <iframe id="datawrapper-chart-a5OSn" src="//datawrapper.dwcdn.net/a5OSn/1/" scrolling="no" frameborder="0" allowtransparency="true" style="width: 0; min-width: 100% !important;" height="465"></iframe><script type="text/javascript">if("undefined"==typeof window.datawrapper)window.datawrapper={};window.datawrapper["a5OSn"]={},window.datawrapper["a5OSn"].embedDeltas={"100":465,"200":465,"300":465,"400":465,"500":465,"700":465,"800":465,"900":465,"1000":465},window.datawrapper["a5OSn"].iframe=document.getElementById("datawrapper-chart-a5OSn"),window.datawrapper["a5OSn"].iframe.style.height=window.datawrapper["a5OSn"].embedDeltas[Math.min(1e3,Math.max(100*Math.floor(window.datawrapper["a5OSn"].iframe.offsetWidth/100),100))]+"px",window.addEventListener("message",function(a){if("undefined"!=typeof a.data["datawrapper-height"])for(var b in a.data["datawrapper-height"])if("a5OSn"==b)window.datawrapper["a5OSn"].iframe.style.height=a.data["datawrapper-height"][b]+"px"});</script>
+      <img style="width:100%" src="{{ "/assets/img/charts/weapons-highlight-1-sm.png" | relative_url }}" class="" alt="">
     </div>
     <details role="group" class="margin-bottom--4 details-small">
       <summary role="button" aria-controls="details-content-1" aria-expanded="true">
