Set up pages and files for sprint 28

--- a/_includes/sticky-nav.html
+++ b/_includes/sticky-nav.html
@@ -2,43 +2,43 @@
   <h2 class="heading-medium">Sections</h2>
   <ul class="section-contents">
     <li>
-      <a href="#section-1">Breadcrumbs</a>
+      <a href="#accordian">Accordian</a>
     </li>
     <li>
-      <a href="#section-2">Headings</a>
+      <a href="#alerts">Alerts</a>
     </li>
     <li>
-      <a href="#section-3">Alerts</a>
+      <a href="#breadcrumbs">Breadcrumbs</a>
     </li>
     <li>
-      <a href="#section-4">Tables</a>
+      <a href="#charts">Charts</a>
     </li>
     <li>
-      <a href="#section-5">Accordian</a>
+      <a href="#get-all-data">Get all data</a>
     </li>
     <li>
-      <a href="#section-6">Small content box</a>
+      <a href="#headings">Headings</a>
     </li>
     <li>
-      <a href="#section-7">Snapshots</a>
+      <a href="#related-links">Related links</a>
     </li>
     <li>
-      <a href="#section-8">Related links</a>
+      <a href="#related-statistics">Related statistics</a>
     </li>
     <li>
-      <a href="#section-9">Toggle content</a>
+      <a href="#small-content-box">Small content box</a>
     </li>
     <li>
-      <a href="#section-10">Get all data</a>
+      <a href="#snapshots">Snapshots</a>
     </li>
     <li>
-      <a href="#section-11">Quote</a>
+      <a href="#tables">Tables</a>
     </li>
     <li>
-      <a href="#section-12">Info alert</a>
+      <a href="#toggle-content">Toggle content</a>
     </li>
     <li>
-      <a href="#section-13">Charts</a>
+      <a href="#quote">Quote</a>
     </li>
   </ul>
 </div>
