--- a/_includes/chart.html
+++ b/_includes/chart.html
@@ -1,20 +1,32 @@
+
+
 <p class="heading-small">Increases evident in police recorded offences involving a knife or sharp instrument for the third year</p>
 <p class="font-xsmall">England and Wales, year ending March 2011 to year ending December 2017</p>
-<img style="width:100%" src="{{ "/assets/img/charts/weapons_firearm_chart_lg.png " | relative_url }}" class="" alt="">
-<p class="heading-xsmall">Source: Police recorded crime, Home Office</p>
+
+<div id="chart1"></div>
+
+<script type="text/javascript" src="https://pym.nprapps.org/pym.v1.min.js"></script>
+
+<script>
+var pymParent = new pym.Parent('chart1', "https://www.ons.gov.uk/embed?uri=/economy/grossdomesticproductgdp/bulletins/secondestimateofgdp/januarytomarch2018/86d33913", {});
+</script>
+
+
+
+<p class="font-xsmall">Source: Police recorded crime, Home Office</p>
 <p class="heading-xsmall">Notes:</p>
 <ol>
   <li class="font-xsmall">Police recorded crime data are not designated as National Statistics.</li>
 </ol>
 <h5 class="margin-bottom--1">Download this chart</h5>
 <div class="btn-group margin-bottom--4">
-  <button class="btn btn--primary font-xsmall">
+  <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-png" href="#">
         Image
-    </button>
-  <button class="btn btn--primary font-xsmall">
+    </a>
+  <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-csv" href="#">
         .CSV
-    </button>
-  <button class="btn btn--primary font-xsmall">
+    </a>
+  <a class="btn btn--primary font-xsmall link--no-underline" data-gtm-type="download-xls" href="#">
         .XLS
-    </button>
+    </a>
 </div>
