--- a/_sass/_colours.scss
+++ b/_sass/_colours.scss
@@ -26,6 +26,8 @@ $cod-gray:	  #111111;
 $link-hover-colour: #2B8CC4;
 
 
+
+
 // Font colours
 .font-color--astral {
   color: $astral;
@@ -57,6 +59,10 @@ $link-hover-colour: #2B8CC4;
 
 .font-color--white {
   color: $white;
+}
+
+.font-color--haze {
+  color: $haze;
 }
 
 .font-color--iron {
