--- a/_sass/_links.scss
+++ b/_sass/_links.scss
@@ -19,8 +19,12 @@ a:hover {
   color: $link-hover-colour;
 }
 
-a.white-link:hover {
-  color: $white;
+.astral-link {
+  color: $haze;
+}
+
+a.astral-link:hover {
+  color: $haze;
   opacity: 0.7;
 }
 
