correct spelling in snapshot

--- a/_includes/snapshot.html
+++ b/_includes/snapshot.html
@@ -16,7 +16,7 @@
   </div>
 
   <div class="flex-col background--gallery padding-left--2 padding-right--2">
-    <h4><a class="heading-medium" href="../violent-crime">Violence crime in England and Wales</a></h4>
+    <h4><a class="heading-medium" href="../violent-crime">Violent crime in England and Wales</a></h4>
     <p>Little change in levels of violent crime in recent years</p>
     <div class="margin-bottom--2" style="padding:8px 8px 0px 8px; background-color:white;">
       <img style="width:100%" src="{{ "/assets/img/charts/violent_crime_chart_sm.png" | relative_url }}" class="" alt="">
