--- a/_sass/_flex-grid.scss
+++ b/_sass/_flex-grid.scss
@@ -7,8 +7,14 @@
 .flex-col {
   flex: 1;
   margin-right: 16px;
+  position: relative;
 }
 
 .flex-col:last-child {
   margin-right: 0;
+}
+
+.position-bottom {
+  position: absolute;
+  bottom: 0;
 }
