change colour and font size for methodology box

--- a/_sass/_content-box.scss
+++ b/_sass/_content-box.scss
@@ -32,6 +32,8 @@
 }
 
 .highlight {
-  //background-color: rgba(245,230,80, .5);
   background-color: rgba(255, 204, 0, .2);
+  p {
+    font-size: 16px;
+  }
 }
