Adjusting li margins top and bottom

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -49,12 +49,9 @@ ul,ol {
 }
 li {
   padding: 0;
-  margin-bottom: $spacing-unit*2;
+  margin-top: $spacing-unit;
+  margin-bottom: $spacing-unit;
 }
-
-
-
-
 
 // Font weights
 .font-weight--bold {
