--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -151,8 +151,9 @@ ul.section-contents {
 }
 
 .section-contents li {
-  margin: 0 0 $spacing-unit*1 0;
-  padding: 0;
+  margin: 0;
+  padding-right: $spacing-unit*2;
+  margin-left: $spacing-unit*2;
 }
 
 // panel
