Sticky nav li stylng

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -154,6 +154,8 @@ ul.section-contents {
   margin: 0;
   padding-right: $spacing-unit*2;
   margin-left: $spacing-unit*2;
+  margin-bottom: 5px;
+  line-height: 20px;
 }
 
 // panel
