Update columns and sticky

--- a/_includes/sticky-nav.html
+++ b/_includes/sticky-nav.html
@@ -1,5 +1,5 @@
 <div class="">
-  <h2 class="heading-medium">Sections</h2>
+  <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Sections:</h2>
   <ul class="section-contents">
     <li>
       <a href="#accordian">Accordian</a>
