--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -53,6 +53,10 @@ li {
   margin-bottom: $spacing-unit;
 }
 
+.list-heading {
+  margin-bottom: $spacing-unit;
+}
+
 // Font weights
 .font-weight--bold {
   font-weight: bold;
