--- a/_sass/_details.scss
+++ b/_sass/_details.scss
@@ -27,6 +27,7 @@ details {
     .panel {
         border-left: 5px solid $aluminium;
         padding-left: 16px;
+        padding-top: $spacing-unit*3;
     }
 
     // An i.arrow element is created via the pollyfill for old browsers
