--- a/_includes/snapshots/homicide-snapshot.html
+++ b/_includes/snapshots/homicide-snapshot.html
@@ -4,7 +4,7 @@
   </div>
   <div class="padding-left--1 padding-right--1 padding-bottom--4">
     <h4><a class="heading-small" href="../weapons-crime">Homicide</a></h4>
-    <p>Homicide in England and Wales, including murder, manslaughter, corporate manslaughter and infanticide.</p>
+    <p>Homicide has increased by 9% to 653.</p>
   </div>
   <div class="position-bottom">
     <p class="font-xxsmall margin-bottom--2 padding-left--1">Released: 26 April 2018</p>
