toggle content pattern

--- a/_sass/_borders.scss
+++ b/_sass/_borders.scss
@@ -26,6 +26,10 @@
   border: 1px solid $gallery;
 }
 
+.border-bottom--gallery {
+  border-bottom: 1px solid $gallery;
+}
+
 .border-bottom--haze {
   border-bottom: 1px solid $haze;
 }
