--- a/_includes/headline.html
+++ b/_includes/headline.html
@@ -1,4 +1,5 @@
-<div class="border-bottom--gallery">
+<div class="border-bottom--gallery margin-top--4">
+  <div class="open-close"><a href="">Open all</a></div>
   <div class="js-show-hide">
     <div class="show-hide show-hide--light">
       <div class="js-show-hide__title headline-title">
