--- a/_sass/_show-hide.scss
+++ b/_sass/_show-hide.scss
@@ -114,10 +114,37 @@
   border-top: 1px solid $gallery;
   //border-bottom: 1px solid $gallery;
   color: $matisse;
+  .js-show-hide__button:hover, .js-show-hide__button:focus,  {
+    text-decoration: none;
+  }
 }
 
 .headline-title:hover {
   background-color: $alabaster;
+}
+
+
+
+.headline-title {
+  .js-show-hide__button[aria-expanded=false]:after {
+    background-image: url(img/icons-plus-minus.svg);
+    background-position: 0 -16px;
+    background-size: 16px 32px;
+    height: 16px;
+    width: 16px;
+    top: 40%;
+  }
+}
+
+.headline-title {
+  .js-show-hide__button[aria-expanded=true]:after {
+    background-image: url(img/icons-plus-minus.svg);
+    background-position: 0 0;
+    background-size: 16px 32px;
+    height: 16px;
+    width: 16px;
+    top: 40%;
+  }
 }
 
 .headline-content {
@@ -125,6 +152,10 @@
   padding-right: 0;
   padding-top: $spacing-unit*2;
   border-top: none;
+}
+
+.open-close {
+  margin-bottom: 5px;
 }
 
 //end of headline
