Add javascript inline for toggle content pattern

--- a/_includes/headline.html
+++ b/_includes/headline.html
@@ -1,6 +1,6 @@
 <div class="border-bottom--gallery margin-top--4">
-  <div class="open-close"><a href="">Open all</a></div>
-  <div class="js-show-hide">
+  <div class="open-close" onclick="openAllAccordions()"><a href="">Open all</a></div>
+  <div class="js-show-hide headline">
     <div class="show-hide show-hide--light">
       <div class="js-show-hide__title headline-title">
         <p class="heading-small">
