--- a/_sass/_borders.scss
+++ b/_sass/_borders.scss
@@ -33,3 +33,7 @@
 .border-bottom--haze {
   border-bottom: 1px solid $haze;
 }
+
+.border-top--darkastral {
+  border-top: 1px solid rgba(0, 0, 0, .15);
+}
