--- a/_sass/_content-box.scss
+++ b/_sass/_content-box.scss
@@ -32,7 +32,8 @@
 }
 
 .highlight {
-  background-color: rgba(255, 204, 0, .2);
+  background-color: $gallery;
+  // background-color: rgba(255, 204, 0, .2);
   p {
     font-size: 16px;
   }
