--- a/_sass/_release-data.scss
+++ b/_sass/_release-data.scss
@@ -7,11 +7,15 @@
   }
 
   .panel {
-      // background:rgba(255,255,255, 0.1);
+      background:rgba(255,255,255, 0.1);
       border-left: 5px solid $white;
       padding-left: $spacing-unit*2;
       padding-right: $spacing-unit*2;
   }
+}
+
+.background--0 {
+  background: none !important;
 }
 
 .latest-release {
