--- a/_sass/_release-data.scss
+++ b/_sass/_release-data.scss
@@ -8,7 +8,7 @@
 
   .panel {
       background:rgba(255,255,255, 0.1);
-      border-left: 5px solid $white;
+      border-left: 5px solid $haze;
       padding-left: $spacing-unit*2;
       padding-right: $spacing-unit*2;
   }
@@ -27,7 +27,7 @@
 .header-meta {
   padding-top: $spacing-unit*2;
   p {
-    border-right: 1px solid rgba(0, 0, 0, .15);
+    border-right: 1px solid rgba(0, 0, 0, .3);
     margin-bottom: $spacing-unit*2;
   }
 }
