--- a/_sass/_release-data.scss
+++ b/_sass/_release-data.scss
@@ -1,16 +1,21 @@
 .release-data {
-  display: inline-block;
-
 
   p {
-    margin-bottom: $spacing-unit*4;
+    margin-bottom: $spacing-unit*2;
   }
+
+  display: inline-block;
 
   .panel {
       background:rgba(255,255,255, 0.1);
       border-left: 5px solid $haze;
       padding-left: $spacing-unit*2;
       padding-right: $spacing-unit*2;
+  }
+  @media (min-width: 768px){
+    p {
+      margin-bottom: $spacing-unit*4;
+    }
   }
 }
 
@@ -29,11 +34,28 @@
 }
 
 
+
+
+
 .header-meta {
-  padding-top: $spacing-unit*2;
+  padding-top: 0;
   p {
-    border-right: 1px solid rgba(0, 0, 0, .3);
-    margin-bottom: $spacing-unit*2;
+    margin-bottom: $spacing-unit;
+  }
+
+  @media (min-width: 768px){
+    padding-top: $spacing-unit*2;
+    p {
+      border-right: 1px solid rgba(0, 0, 0, .3);
+      margin-bottom: $spacing-unit*2;
+    }
+  }
+}
+
+.header-meta-wrap {
+  padding-top: 8px;
+  @media (min-width: 768px){
+    padding-top: 0;
   }
 }
 
