--- a/_sass/_warning-text.scss
+++ b/_sass/_warning-text.scss
@@ -3,6 +3,10 @@
   line-height: 1.31579;
   position: relative;
   padding: 4px 0;
+  margin-bottom: 24px;
+  @media (min-width: 768px){
+    margin-bottom: 32px;
+  }
 }
 
 .warning-text__icon {
