--- a/_includes/alerts/latest-not-latest.html
+++ b/_includes/alerts/latest-not-latest.html
@@ -1,4 +1,4 @@
-<!-- Not latest panel -->
+<!--latest panel -->
 <div class="background--astral padding-top--4 padding-left--2">
   <div class="wrapper">
     <div class="col-wrap">
