--- a/_includes/alerts/warning-text.html
+++ b/_includes/alerts/warning-text.html
@@ -7,7 +7,7 @@
 </div>
 
 
-<div class="background--astral padding-top--4 padding-left--2 margin-bottom--4">
+<div class="background--astral padding-top--4 padding-left--2 margin-bottom--4" style="overflow:auto;">
   <div class="warning-text warning-text__white">
     <span class="warning-text__icon" aria-hidden="false">!</span>
     <strong class="warning-text__text">
