--- a/_sass/_content-box.scss
+++ b/_sass/_content-box.scss
@@ -31,6 +31,12 @@
   }
 }
 
+.js-show-hide__content {
+  .highlight {
+    background-color: $white;
+  }
+}
+
 .highlight {
   background-color: $gallery;
   // background-color: rgba(255, 204, 0, .2);
