Work in progress of warning patterns

--- a/_sass/_release-data.scss
+++ b/_sass/_release-data.scss
@@ -33,9 +33,21 @@
   margin-bottom: $spacing-unit*0;
 }
 
+.inset-text-19 {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  font-size: 19px;
+}
 
-
-
+.inset-text-16 {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  font-size: 16px;
+}
 
 .header-meta {
   padding-top: 0;
