Creating new pattern for inset-text

--- a/_includes/sticky-nav.html
+++ b/_includes/sticky-nav.html
@@ -20,6 +20,9 @@
       <a href="#headings">Headings</a>
     </li>
     <li>
+      <a href="#inset-text">Inset text</a>
+    </li>
+    <li>
       <a href="#quote">Quote</a>
     </li>
     <li>
