--- a/_sass/_inset-text.scss
+++ b/_sass/_inset-text.scss
@@ -7,10 +7,11 @@
   display: inline-block;
 
   .panel {
-      background:rgba(255,255,255, 0.1);
-      border-left: 5px solid $haze;
+      border-left: 10px solid $gallery;
       padding-left: $spacing-unit*2;
       padding-right: $spacing-unit*2;
+      padding-top: $spacing-unit*2;
+      padding-bottom: $spacing-unit*2;
   }
   @media (min-width: 768px){
     p {
