Finish the warning text pattern and add to the patterns page

--- a/_includes/sticky-nav.html
+++ b/_includes/sticky-nav.html
@@ -43,5 +43,8 @@
     <li>
       <a href="#toggle-content">Toggle content</a>
     </li>
+    <li>
+      <a href="#warning-text">Warning text</a>
+    </li>
   </ul>
 </div>
