--- a/_sass/_warning-text.scss
+++ b/_sass/_warning-text.scss
@@ -29,11 +29,29 @@
   user-select: none;
 }
 
+.warning-text-large__icon {
+  // border: 3px solid #0b0c0c;
+  min-width: 38px;
+  min-height: 38px;
+  line-height: 38px;
+  margin-top: -20px;
+  font-size: 1.6em;
+}
+
 .warning-text__text {
   display: block;
   margin-left: -15px;
   padding-left: 55px;
   font-weight: bold;
+}
+
+.warning-text-large__text {
+  font-size: 16px;
+  padding-left: $spacing-unit*9;
+
+  @media (min-width: 768px){
+    font-size: 19px;
+  }
 }
 
 .warning-text__assistive {
